@@ -7,7 +7,7 @@ META.yml
 README
 README.mkdn
 SIGNATURE
-lib/Dancer/Plugin/Cache.pm
+lib/Dancer/Plugin/Cache/CHI.pm
 t/000-report-versions.t
 t/TestApp.pm
 t/basic.t
