@@ -1,10 +1,10 @@
-name    = Dancer-Plugin-Cache
+name    = Dancer-Plugin-Cache-CHI
 author  = Yanick Champoux <yanick@cpan.org>
 license = Perl_5
 copyright_holder = Yanick Champoux
 copyright_year   = 2011
 
-version = 0.2.2
+version = 1.0.0
 
 [@YANICK]
 autoprereqs_skip = TestApp
